// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapReducer  should handle GET_TRAFFIC_IMAGES_SUCCEEDED 1`] = `
Object {
  "ERP": Array [],
  "cameraMarkers": Array [],
  "cameras": Array [
    undefined,
  ],
  "erpMarkers": Array [],
  "lineString": Array [],
  "map": Array [],
  "pinnedCameraMarkers": Array [],
  "stepMarkers": Array [],
  "userMarker": Array [],
}
`;

exports[`MapReducer  should handle UPDATE_CAMERA_MARKERS 1`] = `
Object {
  "ERP": Array [],
  "cameraMarkers": Array [
    undefined,
  ],
  "cameras": Array [],
  "erpMarkers": Array [],
  "lineString": Array [],
  "map": Array [],
  "pinnedCameraMarkers": Array [],
  "stepMarkers": Array [],
  "userMarker": Array [],
}
`;

exports[`MapReducer  should handle UPDATE_NEXT_CAMERA 1`] = `
Object {
  "ERP": Array [],
  "cameraMarkers": Array [
    undefined,
  ],
  "cameras": Array [],
  "erpMarkers": Array [],
  "lineString": Array [],
  "map": Array [],
  "pinnedCameraMarkers": Array [],
  "stepMarkers": Array [],
  "userMarker": Array [],
}
`;

exports[`MapReducer  should return the initial state 1`] = `
Object {
  "ERP": Array [],
  "cameraMarkers": Array [],
  "cameras": Array [],
  "erpMarkers": Array [],
  "lineString": Array [],
  "map": Array [],
  "pinnedCameraMarkers": Array [],
  "stepMarkers": Array [],
  "userMarker": Array [],
}
`;
